--- a/CoreDataStructure/DataStructure/DataStructure.csproj
+++ b/CoreDataStructure/DataStructure/DataStructure.csproj
@@ -39,7 +39,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="InsertationSort.cs" />
+    <Compile Include="KnuthSuffle.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SelectionSort.cs" />
+    <Compile Include="ShellSort.cs" />
     <Compile Include="WeightedQuickUnionFind.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
