--- a/CoreDataStructure/DataStructure/DataStructure.csproj
+++ b/CoreDataStructure/DataStructure/DataStructure.csproj
@@ -42,8 +42,10 @@
     <Compile Include="InsertationSort.cs" />
     <Compile Include="KnuthSuffle.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Queue.cs" />
     <Compile Include="SelectionSort.cs" />
     <Compile Include="ShellSort.cs" />
+    <Compile Include="Stack.cs" />
     <Compile Include="WeightedQuickUnionFind.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
