--- a/DataStructures/DataStructure/DataStructure.csproj
+++ b/DataStructures/DataStructure/DataStructure.csproj
@@ -41,6 +41,7 @@
   <ItemGroup>
     <Compile Include="InsertationSort.cs" />
     <Compile Include="KnuthSuffle.cs" />
+    <Compile Include="MaxPq.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queue.cs" />
     <Compile Include="SelectionSort.cs" />
