--- a/DataStructures/DataStructure.Test/DataStructure.Test.csproj
+++ b/DataStructures/DataStructure.Test/DataStructure.Test.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{A4AA9EFE-77F2-425C-A02B-A27A078E800F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DSTest</RootNamespace>
-    <AssemblyName>DSTest</AssemblyName>
+    <RootNamespace>DataStructureTest</RootNamespace>
+    <AssemblyName>DataStructureTest</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -47,9 +47,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Integer.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PriorityQueueTest.cs" />
+    <Compile Include="RandomNumberGenerator.cs" />
+    <Compile Include="SortingTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
