--- a/DataStructures/DataStructure.Test/DataStructure.Test.csproj
+++ b/DataStructures/DataStructure.Test/DataStructure.Test.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BinarySearchTest.cs" />
     <Compile Include="Integer.cs" />
     <Compile Include="Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
