--- a/DataStructures/DataStructure/DataStructure.csproj
+++ b/DataStructures/DataStructure/DataStructure.csproj
@@ -44,9 +44,9 @@
     <Compile Include="InsertationSort.cs" />
     <Compile Include="KnuthSuffle.cs" />
     <Compile Include="MaxPq.cs" />
-    <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queue.cs" />
+    <Compile Include="RedBlackBST.cs" />
     <Compile Include="SelectionSort.cs" />
     <Compile Include="ShellSort.cs" />
     <Compile Include="Stack.cs" />
